css/site.css
/*Utility*/
.with-gutter {
  padding-left: 20px;
  padding-right: 20px;
}
.center-box {
  margin-left: auto;
  margin-right: auto;
}

/*Common Helpers*/
.strip {
  clear: both;
  position: relative;
  z-index: 2;
  zoom: 1;
  min-height:350px;
  background:#fff;
}
.strip.tint{
  background: rgba(15,30,29,0.3);
}

div.wrapper {
  margin: 0 auto;
  max-width: 1200px;
  overflow: hidden;
  width: 50%;
  position: relative;
  z-index: 2;
  opacity: 1;
  transform-style: preserve-3d;
}

.hero-blockquote {
  color:#fff;
}

.reference-link {
  position: absolute;
  bottom: 1px;
  right: 1px;
  font-style: italic;
  font-size: 0.8em;
}

/*Background Video*/
#video-bg {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  zoom: 1;
}
.container-for-video {
  background: #FFF;
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
}
.container-for-video video, .container-for-video img {
  min-width: 100%;
  min-height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}
.container-for-video img {
  z-index: 0;
}
.video #video-bg img { /*Modernizr class*/
  /*display: none;*/
  /*Un-comment when Chrome video codec is available.*/
}
@media only screen and (min-width: 680px) {
  .home section.hero {
    min-height: 500px;
  }
}

/*Section: History*/
.history-strip {
  height:800px;
}
ul.countdown {
  margin:0;
  list-style:none;
}
ul.countdown li {
  width:24%;
  display:inline-block;
  text-align:center;
}
ul.countdown li span {
  font-size: 42px;
  font-weight:bold;
}

/*Section: Metrics*/
.metrics-strip {
  background-color: #334B52;
  color:#9AABA7;
}
@media only screen and (max-width: 348px) { .metrics-strip {padding-bottom:30px;}}
.metrics-strip a {
  color:#EF8188;
}
.metrics-strip .reference-link {
  color:#658285;
}
.metrics-strip b, .metrics-strip strong {
  color:#C0D6D1;
}
.metrics-strip .metric-container {
  position:relative;
}

.metrics-strip .circle-graph {
	margin: 30px auto;
  position:relative;
  width:150px;
  height:150px;
}
.metrics-strip .circle-graph p {
	text-align: center;
  padding: 16px;
  z-index: 100;
  line-height: 17px;
  width:150px;
}
.circle-graph canvas {
  position: absolute;
  top: 0;
  left:0;
}

/*Section: Message*/
.message-strip {
  height:600px;
  color:#7893C3;
  background: #fff url(/images/incubator.jpg) center center no-repeat;
}

.message-strip .messages {
  width:600px;
}

/*Section: Donate*/
.donate-strip{
  text-align:center;
  background:#fff url(/images/baby-hold-finger.jpg) center center no-repeat;
}

.donate-button {
  margin:0 auto;
}

.credits-strip {
  height:100px;
  min-height:initial;
}

